--- a/index.html
+++ b/index.html
@@ -12,51 +12,51 @@
 
 	<link rel="stylesheet" type="text/css" href="./css/fullpage.css" />
 	<link rel="stylesheet" type="text/css" href="./css/style.css" />
-	<style>
-	.section{
-		text-align:center;
-	}
-	.section{
-		background-size: cover;
-	}
-	#section0{
-		background-image: url(./img/alpi8.jpg);
-	}
-	#section1{
-		background-image: url(./img/alpi1.jpg);
-	}
-	#section2{
-		background-image: url(./img/alpi9.jpg);
-	}
-	#section3{
-		background-image: url(./img/alpi5.jpg);
-	}
-	#section4{
-		background-image: url(./img/alpi8.jpg);
-	}
-	#section5{
-		background-image: url(./img/alpi1.jpg);
-	}
-	#section6{
-		background-image: url(./img/alpi9.jpg);
-	}
-	</style>
 </head>
 <body>
 
 <div id="fullpage">
-	<div class="section" id="section0"><h1>Elige, personalízalo<br />El diseño está en tus manos</h1></div>
-	<div class="section" id="section1"><h1>Fabricación local<br />Madera proveniente de bosques renovables</h1></div>
-	<div class="section" id="section2"><h1>Diseños únicos<br />Conéctate con diseñadores de todo el mundo</h1></div>
-	<div class="section" id="section3"><h1>Armado intuitivo<br />Nada más que añadir, nada más que quitar</h1></div>
-	<div class="section" id="section4"><h1>Automatización<br />Innovamos en el proceso de fabricación</h1></div>
-	<div class="section" id="section5"><h1>Diseñadores</h1></div>
-	<div class="section" id="section6"><h1>Redes Sociales<br />Partners</h1></div>
+
+	<div class="section" id="section0">
+		<h1>Elige, personalízalo<br />El diseño está en tus manos</h1>
+		<img src="./img/medo_white.svg" class="logo-medo">
+	</div>
+
+	<div class="section" id="section1">
+		<h1>Fabricación local<br />Madera proveniente de bosques renovables</h1>
+		<img src="./img/medo_white.svg" class="logo-medo">
+	</div>
+
+	<div class="section" id="section2">
+		<h1>Diseños únicos<br />Conéctate con diseñadores de todo el mundo</h1>
+		<img src="./img/medo_white.svg" class="logo-medo">
+	</div>
+	
+	<div class="section" id="section3">
+		<h1>Armado intuitivo<br />Nada más que añadir, nada más que quitar</h1>
+		<img src="./img/medo_white.svg" class="logo-medo">
+	</div>
+	
+	<div class="section" id="section4">
+		<h1>Automatización<br />Innovamos en el proceso de fabricación</h1>
+		<img src="./img/medo_white.svg" class="logo-medo">
+	</div>
+	
+	<div class="section" id="section5">
+		<h1>Diseñadores</h1>
+		<img src="./img/medo_white.svg" class="logo-medo">
+	</div>
+	
+	<div class="section" id="section6">
+		<h1>Redes Sociales<br />Partners</h1>
+		<img src="./img/medo_white.svg" class="logo-medo">
+	</div>
 </div>
 
 
 <script type="text/javascript" src="./js/fullpage.js"></script>
 <script type="text/javascript" src="./js/examples.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 <script type="text/javascript">
     var myFullpage = new fullpage('#fullpage', {
