--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>me·do</title>
 	<meta name="author" content="me·do" />
 	<meta name="description" content="me·do" />
@@ -18,37 +19,37 @@
 <div id="fullpage">
 
 	<div class="section" id="section0">
-		<h1>Elige, personalízalo<br />El diseño está en tus manos</h1>
+		<!-- <h1>Elige, personalízalo<br />El diseño está en tus manos</h1> -->
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 
 	<div class="section" id="section1">
-		<h1>Fabricación local<br />Madera proveniente de bosques renovables</h1>
+		<!-- <h1>Fabricación local<br />Madera proveniente de bosques renovables</h1> -->
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 
 	<div class="section" id="section2">
-		<h1>Diseños únicos<br />Conéctate con diseñadores de todo el mundo</h1>
+		<!-- <h1>Diseños únicos<br />Conéctate con diseñadores de todo el mundo</h1> -->
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section3">
-		<h1>Armado intuitivo<br />Nada más que añadir, nada más que quitar</h1>
+		<!-- <h1>Armado intuitivo<br />Nada más que añadir, nada más que quitar</h1> -->
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section4">
-		<h1>Automatización<br />Innovamos en el proceso de fabricación</h1>
+		<!-- <h1>Automatización<br />Innovamos en el proceso de fabricación</h1> -->
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section5">
-		<h1>Diseñadores</h1>
+		<!-- <h1>Diseñadores</h1> -->
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section6">
-		<h1>Redes Sociales<br />Partners</h1>
+		<!-- <h1>Redes Sociales<br />Partners</h1> -->
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 </div>
