--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 	<div class="section" id="section0">
 		<!-- <h1>Elige, personalízalo<br />El diseño está en tus manos</h1> -->
-		<img src="./img/medo_white.svg" class="logo-medo">
+		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 
 	<div class="section" id="section1">
 		<!-- <h1>Fabricación local<br />Madera proveniente de bosques renovables</h1> -->
-		<img src="./img/medo_white.svg" class="logo-medo">
+		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 
 	<div class="section" id="section2">
@@ -40,12 +40,12 @@
 	
 	<div class="section" id="section4">
 		<!-- <h1>Automatización<br />Innovamos en el proceso de fabricación</h1> -->
-		<img src="./img/medo_white.svg" class="logo-medo">
+		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section5">
 		<!-- <h1>Diseñadores</h1> -->
-		<img src="./img/medo_white.svg" class="logo-medo">
+		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section6">
