--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<div class="section" id="section0">
 		<!-- <h1>Elige, personalízalo<br />El diseño está en tus manos</h1> -->
 		<img src="./img/medo_black.svg" class="logo-medo">
+		<img src="./img/celular.png" class="celular">
 	</div>
 
 	<div class="section" id="section1">
