--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <div id="fullpage">
 
 	<div class="section" id="section0">
-		<!-- <h1>Elige, personalízalo<br />El diseño está en tus manos</h1> -->
+		<h1>Elige, personalízalo</h1>
+		<h2>El diseño está en tus manos</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
 		<img src="./img/celular.png" class="celular">
 	</div>
