--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<h2>El diseño está en tus manos</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
 		<img src="./img/celular.png" class="celular">
+		<img src="./img/fondo_muebles.png" class="fondo-muebles">
 	</div>
 
 	<div class="section" id="section1">
