--- a/index.html
+++ b/index.html
@@ -27,32 +27,37 @@
 	</div>
 
 	<div class="section" id="section1">
-		<!-- <h1>Fabricación local<br />Madera proveniente de bosques renovables</h1> -->
+		<h1>Fabricación local</h1>
+		<h2>Madera proveniente de bosques renovables</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 
 	<div class="section" id="section2">
-		<!-- <h1>Diseños únicos<br />Conéctate con diseñadores de todo el mundo</h1> -->
+		<h3>Diseños únicos</h3>
+		<h4>Conéctate con diseñadores de todo el mundo</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section3">
-		<!-- <h1>Armado intuitivo<br />Nada más que añadir, nada más que quitar</h1> -->
+		<h3>Armado intuitivo</h3>
+		<h4>Nada más que añadir, nada más que quitar</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section4">
-		<!-- <h1>Automatización<br />Innovamos en el proceso de fabricación</h1> -->
+		<h1>Automatización</h1>
+		<h2>Innovamos en el proceso de fabricación</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section5">
-		<!-- <h1>Diseñadores</h1> -->
+		<h1>Diseñadores</h1>
 		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section6">
-		<!-- <h1>Redes Sociales<br />Partners</h1> -->
+		<h3>Redes Sociales</h3>
+		<h4>Partners</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 </div>
