--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <div id="fullpage">
 
 	<div class="section" id="section0">
+		<div class="fp-bg"></div>
 		<h1>Elige, personalízalo</h1>
 		<h2>El diseño está en tus manos</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
@@ -27,35 +28,41 @@
 	</div>
 
 	<div class="section" id="section1">
+		<div class="fp-bg"></div>
 		<h1>Fabricación local</h1>
 		<h2>Madera proveniente de bosques renovables</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 
 	<div class="section" id="section2">
+		<div class="fp-bg"></div>
 		<h3>Diseños únicos</h3>
 		<h4>Conéctate con diseñadores de todo el mundo</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section3">
+		<div class="fp-bg"></div>
 		<h3>Armado intuitivo</h3>
 		<h4>Nada más que añadir, nada más que quitar</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section4">
+		<div class="fp-bg"></div>
 		<h1>Automatización</h1>
 		<h2>Innovamos en el proceso de fabricación</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section5">
+		<div class="fp-bg"></div>
 		<h1>Diseñadores</h1>
 		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section6">
+		<div class="fp-bg"></div>
 		<h3>Redes Sociales</h3>
 		<h4>Partners</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
@@ -65,14 +72,28 @@
 
 <script type="text/javascript" src="./js/fullpage.js"></script>
 <script type="text/javascript" src="./js/examples.js"></script>
+<script type="text/javascript" src="./js/fullpage.parallax.min.js"></script>
+<script type="text/javascript" src="./js/fullpage.extensions.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 <script type="text/javascript">
-    var myFullpage = new fullpage('#fullpage', {
+	var myFullpage = new fullpage('#fullpage', {
         verticalCentered: false,
 		navigation:true,
-        showActiveTooltip: true
+        showActiveTooltip: true,
+		parallax: true,
+		parallaxKey: 'YWx2YXJvdHJpZ28uY29tXzlNZGNHRnlZV3hzWVhnPTFyRQ==',
+		parallaxOptions: {
+			type: 'reveal',
+			percentage: 10,
+			property: 'translate'
+		},
+		scrollingSpeed: 1250,
+		autoScrolling: true,
+		fitToSection:false
     });
+	
 </script>
+
 </body>
 </html>
