--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
 
 <script type="text/javascript">
 	var myFullpage = new fullpage('#fullpage', {
+		licenseKey: '5C38BC7D-960744E4-95CC12D2-0B887589'
         verticalCentered: false,
 		navigation:true,
         showActiveTooltip: true,
 		parallax: true,
-		parallaxKey: 'YWx2YXJvdHJpZ28uY29tXzlNZGNHRnlZV3hzWVhnPTFyRQ==',
+		parallaxKey: 'C86F8C66-837548EC-AEF8CBCE-2AC78C30',
 		parallaxOptions: {
 			type: 'reveal',
 			percentage: 10,
