--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <script type="text/javascript">
 	var myFullpage = new fullpage('#fullpage', {
-		licenseKey: '5C38BC7D-960744E4-95CC12D2-0B887589'
+		licenseKey: '5C38BC7D-960744E4-95CC12D2-0B887589',
         verticalCentered: false,
 		navigation:true,
         showActiveTooltip: true,
