--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div id="fullpage">
 
 	<div class="section" id="section0">
-		<div class="fp-bg"></div>
+		<!-- <div class="fp-bg"></div> -->
 		<h1>Elige, personalízalo</h1>
 		<h2>El diseño está en tus manos</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
@@ -28,41 +28,41 @@
 	</div>
 
 	<div class="section" id="section1">
-		<div class="fp-bg"></div>
+		<!-- <div class="fp-bg"></div> -->
 		<h1>Fabricación local</h1>
 		<h2>Madera proveniente de bosques renovables</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 
 	<div class="section" id="section2">
-		<div class="fp-bg"></div>
+		<!-- <div class="fp-bg"></div> -->
 		<h3>Diseños únicos</h3>
 		<h4>Conéctate con diseñadores de todo el mundo</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section3">
-		<div class="fp-bg"></div>
+		<!-- <div class="fp-bg"></div> -->
 		<h3>Armado intuitivo</h3>
 		<h4>Nada más que añadir, nada más que quitar</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section4">
-		<div class="fp-bg"></div>
+		<!-- <div class="fp-bg"></div> -->
 		<h1>Automatización</h1>
 		<h2>Innovamos en el proceso de fabricación</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section5">
-		<div class="fp-bg"></div>
+		<!-- <div class="fp-bg"></div> -->
 		<h1>Diseñadores</h1>
 		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section6">
-		<div class="fp-bg"></div>
+		<!-- <div class="fp-bg"></div> -->
 		<h3>Redes Sociales</h3>
 		<h4>Partners</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
@@ -82,13 +82,13 @@
         verticalCentered: false,
 		navigation:true,
         showActiveTooltip: true,
-		parallax: true,
-		parallaxKey: 'C86F8C66-837548EC-AEF8CBCE-2AC78C30',
-		parallaxOptions: {
-			type: 'reveal',
-			percentage: 10,
-			property: 'translate'
-		},
+		// parallax: true,
+		// parallaxKey: 'C86F8C66-837548EC-AEF8CBCE-2AC78C30',
+		// parallaxOptions: {
+		// 	type: 'reveal',
+		// 	percentage: 10,
+		// 	property: 'translate'
+		// },
 		scrollingSpeed: 1250,
 		autoScrolling: true,
 		fitToSection:false
