padding de los textos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="section" id="section0">
 		<!-- <div class="fp-bg"></div> -->
 		<h1>Elige, personalízalo</h1>
-		<h2>El diseño está en tus manos</h2>
+		<h2>El diseño está en tus manos.</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
 		<img src="./img/celular.png" class="celular">
 		<img src="./img/fondo_muebles.png" class="fondo-muebles">
@@ -29,29 +29,29 @@
 
 	<div class="section" id="section1">
 		<!-- <div class="fp-bg"></div> -->
-		<h1>Fabricación local</h1>
-		<h2>Madera proveniente de bosques renovables</h2>
+		<h3>Fabricación local</h3>
+		<h2>Madera proveniente de bosques renovables.</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 
 	<div class="section" id="section2">
 		<!-- <div class="fp-bg"></div> -->
 		<h3>Diseños únicos</h3>
-		<h4>Conéctate con diseñadores de todo el mundo</h4>
+		<h4>Conéctate con diseñadores de todo el mundo.</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section3">
 		<!-- <div class="fp-bg"></div> -->
 		<h3>Armado intuitivo</h3>
-		<h4>Nada más que añadir, nada más que quitar</h4>
+		<h4>Nada más que añadir, nada más que quitar.</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 	
 	<div class="section" id="section4">
 		<!-- <div class="fp-bg"></div> -->
-		<h1>Automatización</h1>
-		<h2>Innovamos en el proceso de fabricación</h2>
+		<h1>Tecnología</h1>
+		<h2>Innovamos en el proceso de fabricación.</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
 	
@@ -64,7 +64,7 @@
 	<div class="section" id="section6">
 		<!-- <div class="fp-bg"></div> -->
 		<h3>Redes Sociales</h3>
-		<h4>Partners</h4>
+		<h4>Partners.</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
 	</div>
 </div>
