--- a/index.html
+++ b/index.html
@@ -70,12 +70,36 @@
 		<!-- <div class="fp-bg"></div> -->
 		<h1>Diseñadores</h1>
 		<div class="disenadores">
-				<div>Diseñador 1</div>
-				<div>Diseñador 2</div>
-				<div>Diseñador 3</div>
-				<div>Diseñador 4</div>
-				<div>Diseñador 5</div>
-				<div>Diseñador 6</div>
+				<div><img src="./img/defne.png" class="designer">
+					<h5>Defne Koz</h5>
+					<h6>Turquía</h6>
+				</div>
+
+				<div><img src="./img/karich.png" class="designer">
+					<h5>J.C. Karich</h5>
+					<h6>Chile</h6>
+				</div>
+
+				<div><img src="./img/flavia.png" class="designer">
+					<h5>Flavia Alves de Souza</h5>
+					<h6>Brasil</h6>
+				</div>
+
+				<div><img src="./img/iachetti.png" class="designer">
+					<h5>Giulio Iacchetti</h5>
+					<h6>Italia</h6>
+				</div>
+
+				<div><img src="./img/pailard.png" class="designer">
+					<h5>Nicolas Paillard</h5>
+					<h6>Francia</h6>
+				</div>
+
+				<div><img src="./img/ulian.png" class="designer">
+					<h5>Paolo Ulian</h5>
+					<h6>Italia</h6>
+				</div>
+
 		</div>
 		<img src="./img/medo_black.svg" class="logo-medo">
 	</div>
@@ -123,7 +147,7 @@
     		slidesToShow: 1,
 			slidesToScroll: 1,
 			autoplay: true,
-			autoplaySpeed: 1000,
+			autoplaySpeed: 2500,
  		 });
 	});
 </script>
