arreglos media query designers

--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
 	
 	<div class="section" id="section5">
 		<!-- <div class="fp-bg"></div> -->
-		<h1>Diseñadores</h1>
 		<div class="disenadores">
 				<div><img src="./img/defne.png" class="designer">
 					<h5>Defne Koz</h5>
@@ -152,5 +151,27 @@
 	});
 </script>
 
+<script>
+function myFunction(x) {
+		if (x.matches) { // If media query matches			
+			$('.disenadores').slick({
+				slidesToShow: 1,				
+				slidesToScroll: 1,
+				autoplaySpeed: 2500,
+				autoplay: true,
+ 		 });
+		} else {			
+			$('.disenadores').slick({
+				slidesToShow: 4,
+				slidesToScroll: 1,
+				autoplaySpeed: 2000,
+				autoplay: true,
+ 		 });
+		}
+		}
+		var x = window.matchMedia("(max-width: 600px)")
+		myFunction(x) // Call listener function at run time
+		x.addListener(myFunction) // Attach listener function on state changes
+</script>
 </body>
 </html>
