--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 		<h3>Fabricación local</h3>
 		<h2>Madera proveniente de bosques renovables.</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
-		<img src="./img/celular.png" class="celular">
-		<img src="./img/fondo_muebles.png" class="fondo-muebles">
+		<img src="./img/mesinha.png" class="mesinha">
+		<img src="./img/forest.png" class="forest">
 	</div>
 
 	<div class="section" id="section2">
@@ -44,8 +44,8 @@
 		<h3>Diseños únicos</h3>
 		<h4>Conéctate con diseñadores de todo el mundo.</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
-		<img src="./img/celular.png" class="celular">
-		<img src="./img/fondo_muebles.png" class="fondo-muebles">
+		<img src="./img/configurador.png" class="configurador">
+		<img src="./img/city.png" class="city">
 	</div>
 	
 	<div class="section" id="section3">
