--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="fullpage">
 
 	<div class="section" id="section0">
-		<!-- <div class="fp-bg"></div> -->
+		<div class="fp-bg"></div>
 		<h1>Elige, personalízalo</h1>
 		<h2>El diseño está en tus manos.</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
@@ -31,7 +31,7 @@
 	</div>
 
 	<div class="section" id="section1">
-		<!-- <div class="fp-bg"></div> -->
+		<div class="fp-bg"></div>
 		<h3>Fabricación local</h3>
 		<h2>Madera proveniente de bosques renovables.</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
@@ -40,7 +40,7 @@
 	</div>
 
 	<div class="section" id="section2">
-		<!-- <div class="fp-bg"></div> -->
+		<div class="fp-bg"></div>
 		<h3>Diseños únicos</h3>
 		<h4>Conéctate con diseñadores de todo el mundo.</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
@@ -49,7 +49,7 @@
 	</div>
 	
 	<div class="section" id="section3">
-		<!-- <div class="fp-bg"></div> -->
+		<div class="fp-bg"></div>
 		<h3>Armado intuitivo</h3>
 		<h4>Nada más que añadir, nada más que quitar.</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
@@ -58,7 +58,7 @@
 	</div>
 	
 	<div class="section" id="section4">
-		<!-- <div class="fp-bg"></div> -->
+		<div class="fp-bg"></div>
 		<h1>Tecnología</h1>
 		<h2>Innovamos en el proceso de fabricación.</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
@@ -67,7 +67,7 @@
 	</div>
 	
 	<div class="section" id="section5">
-		<!-- <div class="fp-bg"></div> -->
+		<div class="fp-bg"></div>
 		<div class="disenadores">
 				<div><img src="./img/defne.png" class="designer">
 					<h5>Defne Koz</h5>
@@ -104,7 +104,7 @@
 	</div>
 	
 	<div class="section" id="section6">
-		<!-- <div class="fp-bg"></div> -->
+		<div class="fp-bg"></div>
 		<h3>Redes Sociales</h3>
 		<h4>Partners.</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
@@ -127,13 +127,12 @@
         verticalCentered: false,
 		navigation:true,
         showActiveTooltip: true,
-		// parallax: true,
-		// parallaxKey: 'C86F8C66-837548EC-AEF8CBCE-2AC78C30',
-		// parallaxOptions: {
-		// 	type: 'reveal',
-		// 	percentage: 10,
-		// 	property: 'translate'
-		// },
+		parallax: true,
+		parallaxKey: 'C86F8C66-837548EC-AEF8CBCE-2AC78C30',
+		parallaxOptions: {
+			type: 'reveal',
+			percentage: 70
+		},
 		scrollingSpeed: 1250,
 		autoScrolling: true,
 		fitToSection:false
