prueba en celular

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="fp-bg"></div>
 		<h1>Elige, personalízalo</h1>
 		<h2>El diseño está en tus manos.</h2>
-		<img src="./img/medo_black.svg" class="logo-medo">
+		<img src="./img/medo_black.svg" class="logo-medo" >
 		<img src="./img/celular.png" class="celular" data-parallaxify-range-x="50">
 		<img src="./img/fondo_muebles.png" class="fondo-muebles">
 	</div>
@@ -35,7 +35,7 @@
 		<h3>Fabricación local</h3>
 		<h2>Madera proveniente de bosques renovables.</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
-		<img src="./img/mesinha.png" class="mesinha">
+		<img src="./img/mesinha.png" class="mesinha" data-parallaxify-range-x="50">
 		<img src="./img/forest.png" class="forest">
 	</div>
 
@@ -44,7 +44,7 @@
 		<h3>Diseños únicos</h3>
 		<h4>Conéctate con diseñadores de todo el mundo.</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
-		<img src="./img/configurador.png" class="configurador">
+		<img src="./img/configurador.png" class="configurador" data-parallaxify-range-x="50" data-parallaxify-range-y="50">
 		<img src="./img/city.png" class="city">
 	</div>
 	
@@ -175,16 +175,15 @@ function myFunction(x) {
 
 <script>
 	$.parallaxify({
-		verticalParallax: false,
-		positionProperty: 'transform',
-		responsive: true,
-		motionType: 'natural',
-		mouseMotionType: 'gaussian',
-		motionAngleX: 80,
-		motionAngleY: 80,
-		alphaFilter: 0.5,
-		adjustBasePosition: true,
-		alphaPosition: 0.025,
+		// positionProperty: 'transform',
+		// responsive: true,
+		// motionType: 'natural',
+		// mouseMotionType: 'gaussian',
+		// motionAngleX: 80,
+		// motionAngleY: 80,
+		// alphaFilter: 0.5,
+		// adjustBasePosition: true,
+		// alphaPosition: 0.025,
 		useMouseMove: true,
         useGyroscope: true,
 	});
