--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<h1>Elige, personalízalo</h1>
 		<h2>El diseño está en tus manos.</h2>
 		<img src="./img/medo_black.svg" class="logo-medo" >
-		<img src="./img/celular.png" class="celular" data-parallaxify-range-x="50">
+		<img src="./img/celular.png" class="celular">
 		<img src="./img/fondo_muebles.png" class="fondo-muebles">
 	</div>
 
@@ -35,7 +35,7 @@
 		<h3>Fabricación local</h3>
 		<h2>Madera proveniente de bosques renovables.</h2>
 		<img src="./img/medo_black.svg" class="logo-medo">
-		<img src="./img/mesinha.png" class="mesinha" data-parallaxify-range-x="50">
+		<img src="./img/mesinha.png" class="mesinha">
 		<img src="./img/forest.png" class="forest">
 	</div>
 
@@ -44,7 +44,7 @@
 		<h3>Diseños únicos</h3>
 		<h4>Conéctate con diseñadores de todo el mundo.</h4>
 		<img src="./img/medo_white.svg" class="logo-medo">
-		<img src="./img/configurador.png" class="configurador" data-parallaxify-range-x="50" data-parallaxify-range-y="50">
+		<img src="./img/configurador.png" class="configurador">
 		<img src="./img/city.png" class="city">
 	</div>
 	
@@ -119,7 +119,6 @@
 <script type="text/javascript" src="./js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="./js/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="./js/slick.min.js"></script>
-<script type="text/javascript" src="./js/jquery.parallaxify.min.js"></script>
 
 <script type="text/javascript">
 	var myFullpage = new fullpage('#fullpage', {
@@ -171,22 +170,6 @@ function myFunction(x) {
 		var x = window.matchMedia("(max-width: 600px)")
 		myFunction(x) // Call listener function at run time
 		x.addListener(myFunction) // Attach listener function on state changes
-</script>
-
-<script>
-	$.parallaxify({
-		// positionProperty: 'transform',
-		// responsive: true,
-		// motionType: 'natural',
-		// mouseMotionType: 'gaussian',
-		// motionAngleX: 80,
-		// motionAngleY: 80,
-		// alphaFilter: 0.5,
-		// adjustBasePosition: true,
-		// alphaPosition: 0.025,
-		useMouseMove: true,
-        useGyroscope: true,
-	});
 </script>
 </body>
 </html>
