--- a/index.html
+++ b/index.html
@@ -23,29 +23,25 @@
 
 	<div class="section" id="section0">
 		<div class="fp-bg"></div>
-		<h1>Elige, personalízalo</h1>
-		<h2>El diseño está en tus manos.</h2>
-		<img src="./img/medo_black.svg" class="logo-medo" >
-		<div class="parallax"><img src="./img/celular.png" class="celular" data-parallaxify-range-x="60"></div>
-		<div class="invertido-parallax"><img src="./img/fondo_muebles.png" class="fondo-muebles" data-parallaxify-range-x="30"></div>
-		
+		<h1>what you want</h1>
+		<img src="./img/medo_white.svg" class="logo-medo" >	
+        <img src="./img/linea_divisora.svg" class="linea-divisora" >	
 	</div>
 
 	<div class="section" id="section1">
 		<div class="fp-bg"></div>
-		<h3>Fabricación local</h3>
-		<h4>Madera proveniente de bosques renovables.</h4>
-		<img src="./img/medo_white.svg" class="logo-medo">
-		<div class="parallax"><img src="./img/mesinha.png" class="mesinha"  data-parallaxify-range-x="70"></div>
-	</div>
+		<h1>what you want</h1>
+		<img src="./img/medo_white.svg" class="logo-medo" >	
+        <img src="./img/linea_divisora.svg" class="linea-divisora" >	
+    </div>
 
 	<div class="section" id="section2">
 		<div class="fp-bg"></div>
-		<h3>Diseños únicos</h3>
-		<h2>Conéctate con diseñadores de todo el mundo.</h2>
-		<img src="./img/medo_black.svg" class="logo-medo">
-		<div class="parallax"><img src="./img/configurador.png" class="configurador" data-parallaxify-range="70"></div>
-	</div>
+        <img src="./img/icono_menu.svg" class="menu">
+		<img src="./img/medo_gris.svg" class="logo-medo">
+
+
+    </div>
 	
 	<div class="section" id="section3">
 		<div class="fp-bg"></div>
