--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			$('.menu-medo').css('display','none');
 		}
 		if(destination.index == 2 || destination.index == 3 || destination.index == 4){
-			$('.menu-medo').css('display','block');
+			$('.menu-medo').show(2000);
 		}
 		}
     });	
