--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 <script type="text/javascript">
 	var myFullpage = new fullpage('#fullpage', {
-		anchors: ['home', 'medo', 'youdo', 'youdesign', 'youget'],
+		anchors: ['home', 'me_do', 'you_do', 'you_design', 'you_get'],
 		licenseKey: '5C38BC7D-960744E4-95CC12D2-0B887589',
         verticalCentered: false,
 		navigation:true,
