--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 	<link rel="stylesheet" type="text/css" href="./css/slick-theme.css"/>
 
 </head>
+
 <body>
+
 <div class="menu-medo">
 		<img src="./img/menu.svg" class="menu">
 		<a href="#home"><img src="./img/medo_gris.svg" class="logo-medo-gris"></a>		
@@ -30,7 +32,16 @@
 				</h4>
 				<img src="./img/logo-arauco.svg" class="logo-arauco">
 		</div>
+		<div class="rrss">
+				<h4>
+					<span class="facebook">facebook</span>
+					<span class="instagram">instagram</span>
+					<span class="share">share</span>
+				</h4>
+		</div>
+		
 </div>
+
 <div id="fullpage">
 
 	<div class="section" id="section0">
@@ -45,7 +56,8 @@
 		<h1>what you want</h1>
 		<a href="#home"><img src="./img/medo_white.svg" class="logo-medo" ></a>
         <img src="./img/linea_divisora.svg" class="linea-divisora" >	
-    </div>
+	</div>
+	
 	<div class="section" id="section2">
 		<div class="fp-bg"></div>
 		<h2 style="color:#8EE4C6">You Do</h2>
@@ -64,6 +76,7 @@
 			<h2 style="color:#8EE4C6">You Get</h2>
 			<h2></br>what you want</h2>
 	</div>
+
 <!-- 	
 	<div class="section" id="section5">
 		<div class="fp-bg"></div>
@@ -180,6 +193,7 @@
 	myFunction(x) 
 	x.addListener(myFunction) 
 </script>
+
 <script>	
 	$(document).ready(function(){
 		$.parallaxify({
@@ -213,5 +227,7 @@
 		useGyroscope: false	
   	});
 </script>
+
 </body>
+
 </html>
