--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 		<h3>YOUR EXPERIENCE</h3>
 		<div class="footer">
 				<h4>
-					<span class="about">About me.do</span>
-					<span class="contact">Contact</span>
+					<span class="about"><a href="#">About me.do</a></span>
+					<span class="contact"><a href="mailto:ext.jose.gomez@arauco.com" target="_top">Contact</a></span>
 					<span class="innovation">me.do is an innovation project by</span>
 				</h4>
-				<img src="./img/logo-arauco.svg" class="logo-arauco">
+				<a href="https://www.arauco.cl/" target="_blank"><img src="./img/logo-arauco.svg" class="logo-arauco"></a>
 		</div>
 		<div class="rrss">
 				<h4>
-					<span class="facebook">facebook</span>
-					<span class="instagram">instagram</span>
-					<span class="share">share</span>
+					<span class="facebook"><a href="#">facebook</a></span>
+					<span class="instagram"><a href="https://www.instagram.com/me_do_arauco/" target="_blank">instagram</a></span>
+					<span class="share"><a href="#">share</a></span>
 				</h4>
 		</div>
 		
